--- a/src/Api/WebApi/BlazorChat.Api.WebApi/BlazorChat.Api.WebApi.csproj
+++ b/src/Api/WebApi/BlazorChat.Api.WebApi/BlazorChat.Api.WebApi.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\BlazorChat.Api.Application\BlazorChat.Api.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\BlazorChat.Api.Infrastructure.Persistence\BlazorChat.Api.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
