--- a/src/Api/WebApi/BlazorChat.Api.WebApi/appsettings.json
+++ b/src/Api/WebApi/BlazorChat.Api.WebApi/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-7CB8L9L\\SQLEXPRESS;Database=BlazorChatDb;Trusted_Connection=True;"
   },
+  "AuthConfig": {
+    "Secret": "ferro5Allcombo8" 
+  } ,
   "AllowedHosts": "*"
 }
