--- a/src/Api/WebApi/BlazorChat.Api.WebApi/appsettings.json
+++ b/src/Api/WebApi/BlazorChat.Api.WebApi/appsettings.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Server=DESKTOP-7CB8L9L\\SQLEXPRESS;Database=BlazorChatDb;Trusted_Connection=True;"
   },
   "AuthConfig": {
-    "Secret": "ferro5Allcombo8" 
+    "Secret": "ferro5Allcombo8efrdgrthgt1234" 
   } ,
   "AllowedHosts": "*"
 }
