Add RabbitMQ , Create/Update User

--- a/src/Commons/BlazorChat.Common/BlazorChat.Common/BlazorChat.Common.csproj
+++ b/src/Commons/BlazorChat.Common/BlazorChat.Common/BlazorChat.Common.csproj
@@ -3,17 +3,18 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\RequestModel\" />
+    <Folder Include="Events\User\" />
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
