--- a/src/Api/Core/BlazorChat.Api.Application/BlazorChat.Api.Application.csproj
+++ b/src/Api/Core/BlazorChat.Api.Application/BlazorChat.Api.Application.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Commands\User\Create\" />
+    <Folder Include="Features\Commands\User\Update\" />
     <Folder Include="Features\Queries\" />
     <Folder Include="Interfaces\Repositories\" />
   </ItemGroup>
