--- a/src/Api/Core/BlazorChat.Api.Application/BlazorChat.Api.Application.csproj
+++ b/src/Api/Core/BlazorChat.Api.Application/BlazorChat.Api.Application.csproj
@@ -15,11 +15,12 @@
     <Folder Include="Features\Commands\EntryComment\" />
     <Folder Include="Features\Commands\Entry\CreateVote\" />
     <Folder Include="Features\Commands\DeleteFav\" />
+    <Folder Include="Features\Commands\GetMainPageEntitites\" />
     <Folder Include="Features\Commands\User\Create\" />
     <Folder Include="Features\Commands\User\ChangePassword\" />
     <Folder Include="Features\Commands\User\ComfirmEmail\" />
     <Folder Include="Features\Commands\User\Update\" />
-    <Folder Include="Features\Queries\" />
+    <Folder Include="Features\Queries\GetEntries\" />
     <Folder Include="Interfaces\Repositories\" />
   </ItemGroup>
 
@@ -30,6 +31,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.1.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
   </ItemGroup>
 
 </Project>
