--- a/src/Commons/BlazorChat.Common/BlazorChat.Common/BlazorChat.Common.csproj
+++ b/src/Commons/BlazorChat.Common/BlazorChat.Common/BlazorChat.Common.csproj
@@ -10,11 +10,14 @@
     <Folder Include="Events\EntryFav\" />
     <Folder Include="Events\User\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Models\Pagination\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
