--- a/src/Api/WebApi/BlazorChat.Api.WebApi/BlazorChat.Api.WebApi.csproj
+++ b/src/Api/WebApi/BlazorChat.Api.WebApi/BlazorChat.Api.WebApi.csproj
@@ -8,12 +8,18 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\BlazorChat.Api.Application\BlazorChat.Api.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\BlazorChat.Api.Infrastructure.Persistence\BlazorChat.Api.Infrastructure.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\ActionFilter\" />
   </ItemGroup>
 
 </Project>
